REF : 정답번호와 보너스 넘버를 가진 AnswerSheet 생성