@@ -1,5 +1,6 @@
 package lotto;
 
+import lotto.domain.AnswerSheet;
 import lotto.domain.Lotto;
 import lotto.match.LottoResult;
 import lotto.prize.StandardPrizeRate;
@@ -20,10 +21,9 @@ class LottoResultTest {
 
     @BeforeEach
     public void setUp() {
-        List<Lotto> lottos = Arrays.asList(
-                new Lotto(Arrays.asList(1, 2, 3, 10, 11, 12)))
-                ;
-        List<Integer> answerSheet = Arrays.asList(1, 2, 3, 4, 5, 6); // 답안
+        List<Lotto> lottos = List.of(new Lotto(Arrays.asList(1, 2, 3, 10, 11, 12)));
+        List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6);
+        AnswerSheet answerSheet = new AnswerSheet(numbers, 9);
         lottoResult = new LottoResult(lottos, answerSheet);
     }
 
